# h3-split

./: Makefile.am  autogen.sh  build-h3.sh  configure.ac  h3.c  h3.h  main.c  readme.md  types.h
example/: big-hole.txt  c-north.txt  c-south.txt  c.txt  hole.txt  multi.txt  north.txt  o-holes.txt  o-split.txt  o-with-holes.txt  o.txt  s-holes.txt  s-with-holes.txt  s.txt
split/: bbox3.h  h3.h  parse.h  print.h  split.h  vect3.h
src/: bbox3.c  h3.c  parse.c  print.c  split.c  vect3.c
test/: print.c  print.h  test_bbox.c  test_bbox1.c
wkt/: parse.c  parse.h  print.c  print.h
